--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -13,13 +13,16 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.17",
+    "@mui/styles": "^5.14.17",
     "@mui/system": "^5.14.17",
     "react": "^18.2.0",
     "react-card-flip": "^1.2.2",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.18.0",
+    "react-slick": "^0.29.0",
     "react-type-animation": "^3.2.0",
+    "slick-carousel": "^1.8.1",
     "typeit-react": "^2.6.4"
   },
   "devDependencies": {
